// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState component should match snapshot with variant "404" 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24 p-32_lg"
    >
      <img
        alt="Logo Foodit"
        class="image -mb-8 w-87 h-91 flex --fill"
        decoding="async"
        fetchpriority="low"
        loading="lazy"
        src="undefined/pf/resources/images/logo-404.png"
      />
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          ¡Uppps! Contenido en preparación
        </p>
        <p
          class="text text-16 text-light-600"
        >
          <span>
            <span
              class="roboto text-16 text-light-600"
            >
              Mientras te invitamos a seguir navegando en
               
            </span>
            <a
              class="link foodit-link flex gap-8 ai-center roboto-regular inline-flex"
              data-variant="secondary"
              href="/"
              target="_self"
              title="Ir a Foodit"
            >
              Foodit
            </a>
          </span>
        </p>
      </div>
    </section>
  </div>
</div>
`;

exports[`EmptyState component should match snapshot with variant "barrier-logged" 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24 p-32_lg"
    >
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          Exclusivo para suscriptores
        </p>
        <p
          class="text text-16 text-light-600"
        >
          Para realizar esta acción es necesario que tengas una suscripción.
        </p>
      </div>
      <div
        class="flex ai-center gap-24"
      >
        <div
          class="relative w-max"
        >
          <button
            class="button foodit-button gap-8 roboto-bold text-12 rounded-4 bg-subscription-positive text-light-800 bg-accent-lechuga__hover px-16 py-8 py-8_md py-12_lg"
            data-button="buttonSubscribeText"
            data-event="subscription_start"
            data-interaction="dataLayerInteraction"
            data-testid="button-suscribe"
            data-variant="accent"
            title="Suscribite"
          >
            <span
              class="roboto-bold"
            >
              Suscribite
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`EmptyState component should match snapshot with variant "barrier-unlogged 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24 p-32_lg"
    >
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          Exclusivo para suscriptores
        </p>
        <p
          class="text text-16 text-light-600"
        >
          Para realizar esta acción es necesario que tengas una suscripción.
        </p>
      </div>
      <div
        class="flex ai-center gap-24"
      >
        <div
          class="relative w-max"
        >
          <button
            class="button foodit-button gap-8 roboto-bold text-12 rounded-4 bg-subscription-positive text-light-800 bg-accent-lechuga__hover px-16 py-8 py-8_md py-12_lg"
            data-button="buttonSubscribeText"
            data-event="subscription_start"
            data-interaction="dataLayerInteraction"
            data-testid="button-suscribe"
            data-variant="accent"
            title="Suscribite"
          >
            <span
              class="roboto-bold"
            >
              Suscribite
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`EmptyState component should match snapshot with variant "empty-state 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24 p-32_lg"
    >
      <img
        alt="¡Aún no hay nada por acá!"
        class="image -mb-8 w-78 h-80 w-94_md h-96_md w-110_lg h-112_lg flex --fill"
        decoding="async"
        fetchpriority="low"
        loading="lazy"
        src="undefined/pf/resources/images/empty-state-recetario.webp"
      />
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          ¡Aún no hay nada por acá!
        </p>
        <p
          class="text text-16 text-light-600"
        >
          <span>
            Presioná el botón
            <i
              class="icon vertical-align-middle mx-4 --icon-16"
            >
              <mock-icon
                critical="true"
                name="bookmark"
              />
            </i>
            GUARDAR en la receta para acceder al contenido cuando quieras y ¡Listo!
          </span>
        </p>
      </div>
      <div
        class="flex ai-center gap-24"
      >
        <div
          class="relative w-max"
        >
          <button
            class="button foodit-button gap-8 roboto-bold text-12 rounded-4 bg-subscription-positive text-light-800 bg-accent-lechuga__hover px-16 py-8 py-8_md py-12_lg"
            data-button="buttonSubscribeText"
            data-event="subscription_start"
            data-interaction="dataLayerInteraction"
            data-testid="button-suscribe"
            data-variant="accent"
            title="Suscribite"
          >
            <span
              class="roboto-bold"
            >
              Suscribite
            </span>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`EmptyState component should match snapshot with variant "search-engine" 1`] = `
<div>
  <div>
    <section
      class="flex ai-center px-24 px-32_lg flex-column flex-row_md gap-32 gap-24_md gap-32_lg p-24 p-32_lg"
    >
      <img
        alt="¡Aún no hay nada por acá!"
        class="image -mb-8 w-78 h-80 w-94_md h-96_md w-110_lg h-112_lg flex --fill"
        decoding="async"
        fetchpriority="low"
        loading="lazy"
        src="undefined/pf/resources/images/empty-state-recetario.webp"
      />
      <div
        class="flex flex-column gap-8 text-center flex-grow-1 ai-center ai-start_md text-start_md"
      >
        <p
          class="text prumo prumo-medium text-24 text-light-800"
        >
          ¡Nada por acá!
        </p>
        <p
          class="text text-16 text-light-600"
        >
          <span
            class="roboto text-16 text-light-600 text-center"
          >
            No se encontraron resultados
          </span>
        </p>
      </div>
    </section>
  </div>
</div>
`;
